<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright (C) 2015 RTAndroid Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<resources>

    <string name="app_name">Benchmark</string>

    <string-array name="app_tabs">
        <item>Benchmark</item>
        <item>Results</item>
    </string-array>

    <string name="run_header_general">General</string>
    <string name="run_input_benchmark">Benchmark</string>
    <string name="run_input_parameter">Parameter</string>

    <string name="run_header_advanced">Advanced</string>
    <string name="run_input_cycles">Cycles</string>
    <string name="run_input_sleep">Sleep</string>

    <string name="run_header_test_cases">Test Cases</string>

    <string name="run_button_run">Run Benchmark</string>
    <string name="run_button_add_case">New Test Case</string>

    <string name="run_input_sleep_unit">ms</string>
    <string name="run_input_no_unit">&#160;</string>

    <string name="dialog_test_case_title">Configure Test Case</string>
    <string name="dialog_test_case_name">Name</string>
    <string name="dialog_test_case_priority">Priority</string>
    <string name="dialog_test_case_power_level">Power Level</string>
    <string name="dialog_test_case_cpu_lock">Cpu Core Lock</string>
    <string name="dialog_test_case_cpu_lock_exclusive">Exclusive</string>
    <string name="dialog_missing_test_case_title">Missing test cases!</string>
    <string name="dialog_missing_test_case_msg">Please select at least one test case from the list.</string>

    <string name="result_switch_name">Saved results:</string>
    <string name="result_title_calc">Calculation Phase</string>
    <string name="result_title_sleep">Sleep Phase</string>

    <string name="result_statistic_min">Minimum Value</string>
    <string name="result_statistic_mean">Average Value</string>
    <string name="result_statistic_max">Maximum Value</string>
    <string name="result_statistic_dev">Standard Deviation</string>

    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>

    <string name="default_results">[{\"mName\":\"Sample Benchmark Result\",\"mResults\":{\"Standard Android (Non-RT)\":{\"SLEEP_MAXIMUM\":8858,\"CALCULATION_MAXIMUM\":19844375,\"CALCULATION_DEVIATION\":1083679,\"SLEEP_DEVIATION\":433,\"SLEEP_MEAN\":124,\"CALCULATION_MEAN\":5257906,\"SLEEP_MINIMUM\":41,\"CALCULATION_MINIMUM\":4985000},\"Basic Real-Time Support\":{\"SLEEP_MAXIMUM\":64,\"CALCULATION_MAXIMUM\":3586750,\"CALCULATION_DEVIATION\":72946,\"SLEEP_DEVIATION\":2,\"SLEEP_MEAN\":26,\"CALCULATION_MEAN\":3262697,\"SLEEP_MINIMUM\":20,\"CALCULATION_MINIMUM\":3217958},\"Advanced Real-Time Support\":{\"SLEEP_MAXIMUM\":50,\"CALCULATION_MAXIMUM\":2880875,\"CALCULATION_DEVIATION\":10469,\"SLEEP_DEVIATION\":1,\"SLEEP_MEAN\":25,\"CALCULATION_MEAN\":2851671,\"SLEEP_MINIMUM\":19,\"CALCULATION_MINIMUM\":2838833}}}]</string>

</resources>
