<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright (C) 2017 RTAndroid Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/AppTheme.SubHeader"
        android:text="@string/run_header_general"/>

    <LinearLayout
        style="@style/AppTheme.Settings.ItemLayout"
        android:id="@+id/benchmark">

        <ImageView
            style="@style/AppTheme.Settings.Icon"
            android:src="@drawable/ic_benchmark"
            android:contentDescription="@null"/>

        <TextView
            style="@style/AppTheme.Settings.Name"
            android:text="@string/run_input_benchmark"/>

        <TextView
            style="@style/AppTheme.Settings.Value"
            android:id="@+id/input_benchmark_display"
            tools:text="Just a name"/>

    </LinearLayout>

    <LinearLayout
        style="@style/AppTheme.Settings.ItemLayout"
        android:id="@+id/parameter"
        android:background="@null">

        <ImageView
            style="@style/AppTheme.Settings.Icon"
            android:src="@drawable/ic_parameter"
            android:contentDescription="@null"/>

        <TextView
            style="@style/AppTheme.Settings.Name"
            android:text="@string/run_input_parameter"/>

        <TextView
            style="@style/AppTheme.Settings.Value"
            android:id="@+id/input_parameter_display"
            tools:text="52145"/>

    </LinearLayout>

    <TextView
        style="@style/AppTheme.SubHeader"
        android:text="@string/run_header_advanced"/>

    <LinearLayout
        style="@style/AppTheme.Settings.ItemLayout"
        android:id="@+id/cycles">

        <ImageView
            style="@style/AppTheme.Settings.Icon"
            android:src="@drawable/ic_cycles"
            android:contentDescription="@null"/>

        <TextView
            style="@style/AppTheme.Settings.Name"
            android:text="@string/run_input_cycles"/>

        <TextView
            style="@style/AppTheme.Settings.Value"
            android:id="@+id/input_cycles_display"
            tools:text="42"/>

    </LinearLayout>

    <LinearLayout
        style="@style/AppTheme.Settings.ItemLayout"
        android:id="@+id/sleep"
        android:background="@null">

        <ImageView
            style="@style/AppTheme.Settings.Icon"
            android:src="@drawable/ic_sleep"
            android:contentDescription="@null"/>

        <TextView
            style="@style/AppTheme.Settings.Name"
            android:text="@string/run_input_sleep"/>

        <TextView
            style="@style/AppTheme.Settings.Value"
            android:id="@+id/input_sleep_display"
            tools:text="10 ms"/>

    </LinearLayout>

</LinearLayout>
