<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright (C) 2015 RTAndroid Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context="rtandroid.benchmark.ui.BenchmarkFragment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_switch_name"
            android:layout_marginEnd="16dp"/>

        <Spinner
            android:id="@+id/run_benchmark_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:text="@string/result_title_calc" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray"/>

        <rtandroid.benchmark.ui.views.StatisticView
            android:id="@+id/calc_minimum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:statisticTitle="@string/result_statistic_min"/>

        <rtandroid.benchmark.ui.views.StatisticView
            android:id="@+id/calc_mean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:statisticTitle="@string/result_statistic_mean"/>

        <rtandroid.benchmark.ui.views.StatisticView
            android:id="@+id/calc_maximum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:statisticTitle="@string/result_statistic_max"/>

        <rtandroid.benchmark.ui.views.StatisticView
            android:id="@+id/calc_deviation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:statisticTitle="@string/result_statistic_dev"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:text="@string/result_title_sleep" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray"/>

        <rtandroid.benchmark.ui.views.StatisticView
            android:id="@+id/sleep_minimum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:statisticTitle="@string/result_statistic_min"/>

        <rtandroid.benchmark.ui.views.StatisticView
            android:id="@+id/sleep_mean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:statisticTitle="@string/result_statistic_mean"/>

        <rtandroid.benchmark.ui.views.StatisticView
            android:id="@+id/sleep_maximum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:statisticTitle="@string/result_statistic_max"/>

        <rtandroid.benchmark.ui.views.StatisticView
            android:id="@+id/sleep_deviation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:statisticTitle="@string/result_statistic_dev"/>

    </LinearLayout>

    </ScrollView>

</LinearLayout>