<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="16dp">

    <!-- Name -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:inputType="text"
            android:hint="@string/dialog_test_case_name"/>

    </android.support.design.widget.TextInputLayout>

    <!-- Priority -->

    <TextView
        android:id="@+id/input_priority_label"
        style="@style/OptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_name_layout"
        android:labelFor="@+id/input_priority"
        android:text="@string/dialog_test_case_priority"/>

    <SeekBar
        android:id="@+id/input_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_priority_label"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/txt_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/input_priority_label"
        android:layout_marginStart="16dp"/>

    <!-- Power Level -->

    <TextView
        android:id="@+id/input_power_level_label"
        style="@style/OptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_priority"
        android:labelFor="@+id/input_power_level"
        android:text="@string/dialog_test_case_power_level"/>

    <SeekBar
        android:id="@+id/input_power_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_power_level_label"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/txt_power_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/input_power_level_label"/>

    <!-- Core Lock -->

    <TextView
        android:id="@+id/input_cpu_label"
        style="@style/OptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_power_level"
        android:labelFor="@+id/input_cpu_core"
        android:text="@string/dialog_test_case_cpu_lock"/>

    <Spinner
        android:id="@+id/input_cpu_core"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_cpu_label"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
